--- a/package.json
+++ b/package.json
@@ -6,16 +6,20 @@
   "type": "module",
   "scripts": {
     "start": "node server.js",
-    "dev": "nodemon server.js"
+    "dev": "nodemon server.js",
+    "build": "echo 'No build step needed for plain Node.js'"
   },
   "keywords": [],
   "author": "Equipo StreamFlix",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
-    "mongoose": "^8.19.1"
+    "jsonwebtoken": "^9.0.2",
+    "mongoose": "^8.19.1",
+    "joi": "^17.11.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
