--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@types/bcryptjs": "^2.4.6",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/mongoose": "^5.11.96",
     "@types/node": "^24.8.0",
     "@types/nodemailer": "^7.0.2",
