--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,9 @@
     "outDir": "dist",
     "esModuleInterop": true,
     "strict": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "moduleResolution": "node",
+    "types": ["node"]
   },
   "include": ["src"]
 }
