--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,3 @@
-<<<<<<< HEAD
 # Logs
 logs
 *.log
@@ -8,9 +7,16 @@ yarn-error.log*
 pnpm-debug.log*
 lerna-debug.log*
 
+# Dependencies
 node_modules
+
+# Build output
 dist
 dist-ssr
+public
+
+# Local env files
+.env
 *.local
 
 # Editor directories and files
@@ -23,11 +29,6 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
-# Environment variables
-.env
-=======
-node_modules
-.env
-dist/
-public/
->>>>>>> upstream/main
+
+# Optional: keep lock files out of some flows
+# package-lock.json
